test/source/errors/invalid-indent.hc
// This file contains an invalid indent, which
// should cause an error in phase 2 parsing

output input
	output input
